@@ -5,6 +5,7 @@
 			<attribute name="ignore_optional_problems" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src/gen-res"/>
 	<classpathentry kind="src" path="src/res"/>
 	<classpathentry kind="src" path="src/backend"/>
 	<classpathentry kind="src" path="src/frontend"/>
