@@ -212,8 +212,9 @@ aspect CreateBCode {
   }
 
   public void ASTNode.createBCode(CodeGeneration gen) {
-    for (int i=0; i<getNumChild(); i++)
+    for (int i=0; i<getNumChild(); i++) {
       getChild(i).createBCode(gen);
+    }
   }
 
   public void Literal.createBCode(CodeGeneration gen) {
@@ -246,8 +247,13 @@ aspect CreateBCode {
   eq VarAccess.isVarAccessWithAccessor() = decl() instanceof FieldDeclaration &&
         decl().isInstanceVariable() && requiresAccessor();
 
+  public void VarDeclStmt.createBCode(CodeGeneration gen) {
+    for (VariableDeclaration decl: getSingleDeclList()) {
+      decl.createBCode(gen);
+    }
+  }
+
   public void VariableDeclaration.createBCode(CodeGeneration gen) {
-    super.createBCode(gen);
     if (hasInit()) {
       gen.addLocalVariableEntryAtCurrentPC(name(), type().typeDescriptor(), localNum(), variableScopeEndLabel(gen));
       emitInitializerBCode(gen);
@@ -441,8 +447,9 @@ aspect CreateBCode {
   public void VarAccess.createAssignLoadDest(CodeGeneration gen) {
     createLoadQualifier(gen);
     Variable v = decl();
-    if(v.isInstanceVariable())
+    if(v.isInstanceVariable()) {
       gen.emitDup();
+    }
     if(v instanceof VariableDeclaration) {
       VariableDeclaration decl = (VariableDeclaration)v;
       decl.type().emitLoadLocal(gen, decl.localNum());
