@@ -87,6 +87,7 @@ aspect Java2Rewrites {
       )
     );
     getBodyDeclList().insertChild(createAssertionsDisabled, 0);
+    // TODO remove this!
     // explicit read to trigger possible rewrites
     createAssertionsDisabled = (FieldDeclaration)getBodyDeclList().getChild(0);
     // transform the generated initalization, e.g., the ClassAccess construct
