@@ -15,9 +15,26 @@ aspect LocalNum {
    * @return local size for declared variables
    */
   syn lazy int Stmt.localSize() = 0;
-  eq VariableDeclaration.localSize() = type().variableSize();
+
+  eq VarDeclStmt.localSize() {
+    int size = 0;
+    for (VariableDeclaration decl: getSingleDeclList()) {
+      size += decl.localSize();
+    }
+    return size;
+  }
+
+  syn lazy int VariableDeclaration.localSize() = type().variableSize();
 
   inh lazy int VariableDeclaration.localNum();
+
+  eq VarDeclStmt.getSingleDecl(int index).localNum() {
+    if (index == 0) {
+      return localNum();
+    } else {
+      return getSingleDecl(index-1).localNum() + getSingleDecl(index-1).localSize();
+    }
+  }
 
   /**
    * @return The next available local variable index.
