@@ -10,24 +10,14 @@
 import java.util.*;
 
 aspect DeclareBeforeUse {
-  public int ASTNode.varChildIndex(Block b) {
-    ASTNode node = this;
-    while(node.getParent().getParent() != b) {
-      node = node.getParent();
-    }
-    return b.getStmtListNoTransform().getIndexOfChild(node);
-  }
+  inh lazy int VariableDeclaration.blockIndex();
+  eq Program.getChild().blockIndex() = -1;// default value
+  eq Block.getStmt(int index).blockIndex() = index;// index in stmt list of block
 
-  public boolean Block.declaredBeforeUse(Variable decl, ASTNode use) {
-    int indexDecl = ((ASTNode)decl).varChildIndex(this);
-    int indexUse = use.varChildIndex(this);
-    return indexDecl <= indexUse;
-  }
-  public boolean Block.declaredBeforeUse(Variable decl, int indexUse) {
-    int indexDecl = ((ASTNode)decl).varChildIndex(this);
-    return indexDecl <= indexUse;
-  }
+  syn boolean Block.declaredBeforeUse(VariableDeclaration decl, int indexUse) =
+    decl.blockIndex() < indexUse;
 
+  // TODO use inherited attr?
   public int ASTNode.varChildIndex(TypeDecl t) {
     ASTNode node = this;
     while(node != null && node.getParent() != null && node.getParent().getParent() != t) {
@@ -43,6 +33,7 @@ aspect DeclareBeforeUse {
     int indexUse = use.varChildIndex(this);
     return indexDecl < indexUse;
   }
+
   public boolean TypeDecl.declaredBeforeUse(Variable decl, int indexUse) {
     int indexDecl = ((ASTNode)decl).varChildIndex(this);
     return indexDecl < indexUse;
