@@ -214,6 +214,14 @@ aspect ErrorCheck {
     }
   }
 
+  public void VarDeclStmt.collectErrors() {
+    // check reachability of the multi-declaration
+    checkUnreachableStmt();
+
+    // delegate other error checks to NTA single variable declarations
+    getSingleDeclList().collectErrors();
+  }
+
   public void Program.errorCheck(Collection collection) {
     for(Iterator iter = compilationUnitIterator(); iter.hasNext(); ) {
       CompilationUnit cu = (CompilationUnit)iter.next();
