@@ -167,6 +167,7 @@ aspect ConstructorDecl {
     return true;
   }
 }
+
 aspect ImplicitConstructor {
 
   /**
