@@ -624,35 +624,39 @@ aspect PrettyPrint {
     sb.append(indent());
     sb.append("for(");
     if(getNumInitStmt() > 0) {
-      if(getInitStmt(0) instanceof VariableDeclaration) {
+      if (getInitStmt(0) instanceof VarDeclStmt) {
+        VarDeclStmt var = (VarDeclStmt) getInitStmt(0);
         int minDimension = Integer.MAX_VALUE;
-        for(int i = 0; i < getNumInitStmt(); i++) {
-          VariableDeclaration v = (VariableDeclaration)getInitStmt(i);
-          minDimension = Math.min(minDimension, v.type().dimension());
+        for (VariableDeclaration decl: var.getSingleDeclList()) {
+          minDimension = Math.min(minDimension, decl.type().dimension());
         }
-        VariableDeclaration v = (VariableDeclaration)getInitStmt(0);
-        v.getModifiers().prettyPrint(sb);
-        sb.append(v.type().elementType().typeName());
-        for(int i = minDimension; i > 0; i--)
-          sb.append("[]");
 
-        for(int i = 0; i < getNumInitStmt(); i++) {
-          if(i != 0)
+        // print type
+        var.getModifiers().prettyPrint(sb);
+        sb.append(var.type().elementType().typeName());
+        for (int i = minDimension; i > 0; i--) {
+          sb.append("[]");
+        }
+
+        // print variable decls
+        for (int i = 0; i < var.getNumSingleDecl(); ++i) {
+          if (i != 0) {
             sb.append(",");
-          v = (VariableDeclaration)getInitStmt(i);
-          sb.append(" " + v.name());
-          for(int j = v.type().dimension() - minDimension; j > 0; j--)
+          }
+          VariableDeclaration decl = var.getSingleDecl(i);
+          sb.append(" " + decl.name());
+          for (int j = decl.type().dimension() - minDimension; j > 0; j--) {
             sb.append("[]");
-          if(v.hasInit()) {
+          }
+          if (decl.hasInit()) {
             sb.append(" = ");
-            v.getInit().prettyPrint(sb);
+            decl.getInit().prettyPrint(sb);
           }
         }
-      }
-      else if(getInitStmt(0) instanceof ExprStmt) {
+      } else if(getInitStmt(0) instanceof ExprStmt) {
         ExprStmt stmt = (ExprStmt)getInitStmt(0);
         stmt.getExpr().prettyPrint(sb);
-        for(int i = 1; i < getNumInitStmt(); i++) {
+        for (int i = 1; i < getNumInitStmt(); i++) {
           sb.append(", ");
           stmt = (ExprStmt)getInitStmt(i);
           stmt.getExpr().prettyPrint(sb);
