@@ -252,6 +252,8 @@ aspect TypeAnalysis {
   syn TypeDecl VariableDeclaration.type() = getTypeAccess().type();
   syn lazy TypeDecl ParameterDeclaration.type() = getTypeAccess().type();
 
+  syn TypeDecl VarDeclStmt.type() = getTypeAccess().type();
+
   inh lazy TypeDecl ArrayInit.declType();
   eq Program.getChild(int i).declType() = null;
   eq FieldDecl.getVariableDecl().declType() = null;
@@ -518,6 +520,7 @@ aspect NestedTypes {
   inh BodyDecl Expr.enclosingBodyDecl();
   inh BodyDecl Stmt.enclosingBodyDecl();
   inh BodyDecl TypeDecl.enclosingBodyDecl();
+  inh BodyDecl VariableDeclaration.enclosingBodyDecl();
   eq Program.getChild().enclosingBodyDecl() = null;
   eq BodyDecl.getChild().enclosingBodyDecl() = this;
 
