@@ -29,13 +29,16 @@ aspect UnreachableStatements {
   syn lazy boolean Stmt.canCompleteNormally() = true;
 
   eq ConstructorDecl.getConstructorInvocation().reachable() = true;
-  eq ConstructorDecl.getBlock().reachable() = !hasConstructorInvocation() ? true : getConstructorInvocation().canCompleteNormally();
+  eq ConstructorDecl.getBlock().reachable() =
+    !hasConstructorInvocation() ? true : getConstructorInvocation().canCompleteNormally();
   eq MethodDecl.getBlock().reachable() = true;
   eq StaticInitializer.getBlock().reachable() = true;
   eq InstanceInitializer.getBlock().reachable() = true;
 
-  eq Block.canCompleteNormally() = getNumStmt() == 0 ? reachable() : getStmt(getNumStmt() - 1).canCompleteNormally();
-  eq Block.getStmt().reachable() = childIndex == 0 ? reachable() : getStmt(childIndex-1).canCompleteNormally();
+  eq Block.canCompleteNormally() =
+    getNumStmt() == 0 ? reachable() : getStmt(getNumStmt() - 1).canCompleteNormally();
+  eq Block.getStmt(int index).reachable() =
+    index == 0 ? reachable() : getStmt(index-1).canCompleteNormally();
 
   eq LocalClassDeclStmt.canCompleteNormally() = reachable();
 
@@ -47,7 +50,7 @@ aspect UnreachableStatements {
   eq LabeledStmt.getStmt().reachable() = reachable();
 
   syn lazy boolean BranchTargetStmt.reachableBreak() {
-    for(Iterator iter = targetBreaks().iterator(); iter.hasNext(); ) {
+    for (Iterator iter = targetBreaks().iterator(); iter.hasNext(); ) {
       BreakStmt stmt = (BreakStmt)iter.next();
       if(stmt.reachable())
         return true;
