@@ -78,8 +78,8 @@ abstract MemberDecl : BodyDecl;
 FieldDecl : MemberDecl ::= Modifiers TypeAccess:Access VariableDecl*;
 FieldDeclaration : MemberDecl ::= Modifiers TypeAccess:Access <ID:String> [Init:Expr]; // Simplified FieldDecl
 
-VarDeclStmt : Stmt ::= Modifiers TypeAccess:Access VariableDecl*;
-VariableDeclaration : Stmt ::= Modifiers TypeAccess:Access <ID:String> [Init:Expr]; // Simplified VarDeclStmt
+VarDeclStmt : Stmt ::= Modifiers TypeAccess:Access VariableDecl* /SingleDecl:VariableDeclaration*/;
+VariableDeclaration ::= Modifiers TypeAccess:Access <ID:String> [Init:Expr]; // Simplified VarDeclStmt
 
 VariableDecl ::= <ID:String> Dims* [Init:Expr];
 
