@@ -53,8 +53,15 @@ aspect PreciseRethrow {
     getBlock().modifiedInScope(var);
 
   syn boolean Stmt.modifiedInScope(Variable var);
-  eq VarDeclStmt.modifiedInScope(Variable var) = false;
-  eq VariableDeclaration.modifiedInScope(Variable var) =
+  eq VarDeclStmt.modifiedInScope(Variable var) {
+    for (VariableDeclaration decl: getSingleDeclList()) {
+      if (decl.modifiedInScope(var)) {
+        return true;
+      }
+    }
+    return false;
+  }
+  syn boolean VariableDeclaration.modifiedInScope(Variable var) =
     hasInit() && getInit().modifiedInScope(var);
   eq EmptyStmt.modifiedInScope(Variable var) = false;
   eq LabeledStmt.modifiedInScope(Variable var) =
