@@ -1,6 +1,16 @@
-2013-10-10  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+2014-06-04  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Removed implicit constructor list rewrites
+
+    * Removed variable declaration list rewrites
+        - VarDeclStmt is no longer rewritten to a separate VariableDeclaration
+          statements.
+        - VarDeclStmt now has an NTA list of single declarations named
+          SingleDecl
+        - VariableDeclaration no longer inherits from Stmt.
+    Since VariableDeclaration is now a child of VarDeclStmt some inherited
+    attributes needed to be changed in order to properly propagate values to
+    VariableDeclaration nodes.
 
 2014-06-02  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
